// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`golden baseline — BTC actions on 5.x > BtcDeposit (native BTC → BTC.b) > records its prepare lifecycle 1`] = `
{
  "calls": [
    "api.getDepositAddress",
  ],
  "progress": [
    "needs_address_confirmation [created,issuing,verifying]",
  ],
  "statusAfterPrepare": "needs_address_confirmation",
  "statuses": [
    "needs_address_confirmation",
  ],
}
`;

exports[`golden baseline — BTC actions on 5.x > BtcDepositAndDeploy (native BTC → BTC.b → Silo vault) > records what happens today on testnet 1`] = `
{
  "calls": [
    "capabilities.require",
    "evm.getStakeAndBakeFee",
  ],
  "outcome": "prepared: needs_deploy_authorization",
}
`;

exports[`golden baseline — BTC actions on 5.x > BtcStake (native BTC → LBTC) > records its prepare lifecycle 1`] = `
{
  "calls": [
    "api.getDepositAddress",
    "api.getFeeSignature",
    "capabilities.require",
    "evm.getMintingFee",
  ],
  "progress": [
    "needs_fee_authorization [created,issuing,verifying]",
  ],
  "statusAfterPrepare": "needs_fee_authorization",
  "statuses": [
    "needs_fee_authorization",
  ],
}
`;

exports[`golden baseline — BTC actions on 5.x > BtcStakeAndDeploy (native BTC → LBTC → Veda vault) > records its prepare lifecycle with no existing deposit 1`] = `
{
  "calls": [
    "capabilities.require",
    "evm.getStakeAndBakeFee",
    "api.getDepositAddress",
  ],
  "progress": [
    "needs_deploy_authorization [created,depositing,issuing,verifying]",
  ],
  "statusAfterPrepare": "needs_deploy_authorization",
  "statuses": [
    "needs_deploy_authorization",
  ],
}
`;

exports[`golden baseline — BTC actions on 5.x > BtcStakeAndDeploy (native BTC → LBTC → Veda vault) > records the resume path when a deposit address already exists 1`] = `
{
  "calls": [
    "capabilities.require",
    "evm.getStakeAndBakeFee",
    "api.getDepositAddress",
  ],
  "depositAddress": "tb1qexistingdeposit0000000000000000000000",
  "progress": [
    "address_ready [created,depositing,issuing,verifying]",
  ],
  "statusAfterPrepare": "address_ready",
  "statuses": [
    "address_ready",
  ],
}
`;

exports[`golden baseline — BTC actions on 5.x > ceremony and address legs > BtcDeposit: the confirmAddress path, and authorizeFee after it 1`] = `
{
  "addressReturned": true,
  "authorizeFeeAfterReady": "returns early, no second signature",
  "calls": [
    "api.getDepositAddress",
    "capabilities.require",
    "evm.signLbtcDestination",
    "api.generateDepositAddress",
  ],
  "confirmAddressRefusal": undefined,
  "pathTaken": "confirmAddress",
  "progress": [
    "needs_address_confirmation [created,issuing,verifying]",
    "address_ready [created,issuing,verifying]",
  ],
  "statuses": [
    "needs_address_confirmation",
    "ready",
    "address_ready",
  ],
}
`;

exports[`golden baseline — BTC actions on 5.x > ceremony and address legs > BtcStake: authorize() then generateDepositAddress() 1`] = `
{
  "addressReturned": true,
  "calls": [
    "api.getDepositAddress",
    "api.getFeeSignature",
    "capabilities.require",
    "evm.getMintingFee",
    "capabilities.require",
    "evm.signNetworkFee",
    "api.storeFeeSignature",
    "api.generateDepositAddress",
  ],
  "method": "authorize",
  "progress": [
    "needs_fee_authorization [created,issuing,verifying]",
    "address_ready [created,issuing,verifying]",
  ],
  "statuses": [
    "needs_fee_authorization",
    "ready",
    "address_ready",
  ],
}
`;

exports[`golden baseline — BTC actions on 5.x > ceremony and address legs > BtcStakeAndDeploy: authorizeDeposit() then generateDepositAddress() 1`] = `
{
  "addressReturned": true,
  "calls": [
    "capabilities.require",
    "evm.getStakeAndBakeFee",
    "api.getDepositAddress",
    "capabilities.require",
    "evm.signStakeAndBake",
    "api.storeStakeAndBakeSignature",
    "api.generateDepositAddress",
  ],
  "method": "authorizeDeposit",
  "progress": [
    "needs_deploy_authorization [created,depositing,issuing,verifying]",
    "address_ready [created,depositing,issuing,verifying]",
  ],
  "statuses": [
    "needs_deploy_authorization",
    "ready",
    "address_ready",
  ],
}
`;
